--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,14 @@
-log4j.rootLogger=DEBUG, CONSOLE
+log4j.rootLogger=WARN, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %5p [%10.10t] %65.65C - %m%n
 
-log4j.logger.org.hsqldb=DEBUG, CONSOLE
-log4j.logger.org.ehcache=WARN, CONSOLE
-log4j.logger.org.terracotta.offheapstore=WARN, CONSOLE
+#log4j.logger.org.hsqldb=DEBUG, CONSOLE
+#log4j.logger.org.ehcache=INFO, CONSOLE
+#log4j.logger.org.terracotta.offheapstore=WARN, CONSOLE
+
+
+
+log4j.category.edu.utexas.arlut=INFO, CONSOLE
+log4j.additivity.edu.utexas.arlut=false
